ds-gocalc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gocalc-rs
  labels:
    app: gocalc
spec:
  replicas: 3
  selector:
    matchLabels:
      app: gocalc
  template:
    metadata:
      labels:
        app: gocalc
    spec:
      containers:
        - name: gocalc
          image: tty8747/goapp:v1.23
        - name: nginx
          image: nginx:alpine
          volumeMounts:
            - name: nginx-gocalc-conf
              mountPath: /etc/nginx/conf.d
      volumes:
        - name: nginx-gocalc-conf
          configMap:
            name: nginx-gocalc-conf
