gocalc-nginx-config-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: gocalc-tty8747
  labels:
    app: gocalc-tty8747
spec:
  containers:
  - name: gocalc
    image: tty8747/goapp:v1.23
  - name: nginx
    image: nginx:alpine
    volumeMounts:
      - name: nginx-gocalc-conf
        mountPath: /etc/nginx/conf.d
  volumes:
    - name: nginx-gocalc-conf
      configMap:
        name: nginx-gocalc-conf
